# web-application

./: README_ru.md  app.py  config.py  db.sqlite  pyproject.toml  requirements.txt
helpers/: all_routes.py  decorators.py  gpt_hints.txt  png_to_ico.py
modules/: auth.py  db.py  export_options.py  import_options.py  tables.py
static/: authors.csv  sample_data.csv  stats_report.html
templates/: about.html  cabinet.html  error_page.html  footer.html  header.html  index.html  navbar.html  statistics.html  table.html
templates/auth/: change_password.html  login.html  register.html
templates/export/: export.html  export_result.html
templates/records/: add_record.html  delete_record.html  edit_record.html
