[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ModularWebsiteFlask"
version = "0.1.0"
description = "A modular website built with Flask"
authors = [
    {name = "Max Azatian", email = "no_email_provided_if_you_want_to_contact_me_use_github"},
]
license = {file = "LICENSE"}

### Dependencies ###
[project.dependencies]
amqp = "5.2.0"
annotated-types = "0.6.0"
attrs = "23.1.0"
billiard = "4.2.0"
blinker = "1.7.0"
celery = "5.3.6"
certifi = "2023.11.17"
charset-normalizer = "3.3.2"
click = "8.1.7"
click-didyoumean = "0.3.0"
click-plugins = "1.1.1"
click-repl = "0.3.0"
colorama = "0.4.6"
contourpy = "1.2.0"
cycler = "0.12.1"
dacite = "1.8.1"
Flask = "3.0.0"
Flask-Mail = "0.9.1"
flask-paginate = "2023.10.24"
Flask-WTF = "1.2.1"
fonttools = "4.47.0"
htmlmin = "0.1.12"
idna = "3.6"
ImageHash = "4.3.1"
itsdangerous = "2.1.2"
Jinja2 = "3.1.2"
joblib = "1.3.2"
kiwisolver = "1.4.5"
kombu = "5.3.4"
llvmlite = "0.41.1"
MarkupSafe = "2.1.3"
matplotlib = "3.8.2"
multimethod = "1.10"
networkx = "3.2.1"
numba = "0.58.1"
numpy = "1.25.2"
packaging = "23.2"
pandas = "2.1.4"
patsy = "0.5.5"
phik = "0.12.3"
Pillow = "10.1.0"
prompt-toolkit = "3.0.43"
pydantic = "2.5.3"
pydantic-core = "2.14.6"
pyparsing = "3.1.1"
python-dateutil = "2.8.2"
pytz = "2023.3.post1"
PyWavelets = "1.5.0"
PyYAML = "6.0.1"
redis = "5.0.1"
requests = "2.31.0"
scipy = "1.11.4"
seaborn = "0.12.2"
six = "1.16.0"
statsmodels = "0.14.1"
tangled-up-in-unicode = "0.2.0"
tqdm = "4.66.1"
typeguard = "4.1.5"
typing-extensions = "4.9.0"
tzdata = "2023.3"
urllib3 = "2.1.0"
vine = "5.1.0"
visions = "0.7.5"
wcwidth = "0.2.12"
Werkzeug = "3.0.1"
wordcloud = "1.9.3"
WTForms = "3.1.1"
XlsxWriter = "3.1.9"
ydata-profiling = "4.6.3"

